# CompilerConstructie

./: .project  Main.hs  compiler.cabal  prettyprint.txt
.dist-buildwrapper/: compiler.cabal
.dist-buildwrapper/src/: .Grammar.hs.bwinfo  .Grammar.hs.bwusage  .Grammer.hs.bwinfo  .Grammer.hs.bwusage  .Main.hs.bwinfo  .Main.hs.bwusage  .Parser.hs.bwinfo  .Parser.hs.bwusage  .PrettyPrinter.hs.bwinfo  .PrettyPrinter.hs.bwusage  Main.hs  Parser.hs
src/: Grammar.hs  Main.hs  Parser.hs  PrettyPrinter.hs  TypeChecker.hs
test/: example.spl  testProgram1.spl  testProgram10.spl  testProgram2.spl  testProgram3.spl  testProgram4.spl  testProgram5.spl  testProgram6.spl  testProgram7.spl  testProgram8.spl  testProgram9.spl
