name:           compiler
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Nick

executable compiler
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >=0.5.0 && <0.6
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall

